--- a/styles/style.css
+++ b/styles/style.css
@@ -1,81 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-body {
-	background-color: #000;
+/*==========Base==========*/
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-size: 100%;
+	font-family: 'Inter', sans-serif;
+	color: #eeeeee;
 }
 
-.slider-wrapper {
+body {
+	display: flex;
+	flex-direction: column;
+	background-color: rgb(0, 0, 0);
+	line-height: 1.5e;
+}
+
+.container {
+	margin: 2rem 0;
 	position: relative;
 	max-width: 22rem;
 	margin: 0 auto;
 }
 
-.slider {
-	display: flex;
-	aspect-ratio: 9 / 16;
-	overflow-x: auto;
-	scroll-snap-type: x mandatory;
-	scroll-behavior: smooth;
-	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-	border-radius: 0.5rem;
-	-ms-overflow-style: none;
-	/* Hide scrollbar IE and Edge */
-	scrollbar-width: none;
-	/* Hide scrollbar Firefox */
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.slider::-webkit-scrollbar {
-	display: none;
-}
-
-.slider img {
-	flex: 1 0 100%;
-	scroll-snap-align: start;
-	object-fit: cover;
-}
-
-.slider-nav {
-	display: flex;
-	column-gap: 1rem;
-	position: absolute;
-	bottom: 13rem;
-	left: 50%;
-	transform: translateX(-50%);
-	z-index: 1;
-}
-
-.slider-nav a {
-	width: 0.5rem;
-	height: 0.5rem;
-	border-radius: 50%;
-	background-color: #fff;
-	opacity: 0.75;
-	transition: opacity ease 250ms;
-}
-
-.slider-nav a:hover {
-	opacity: 1;
-}
-
-.slider-itens {
+.wrapper {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-}
-
-.items-wrapper {
-	display: flex;
 	justify-content: center;
-	margin: 2rem 0;
+	align-items: center;
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4),
+			rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7),
+			rgba(0, 0, 0, 1), rgb(0, 0, 0, 1), rgb(0, 0, 0, 1)),
+		url(../assets/Cover-ironman.png);
+	background-position: center center;
+	background-attachment: fixed;
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-attachment: local;
 }
 
 .marvel-logo {
-	position: absolute;
 	bottom: 15rem;
 	display: flex;
 	justify-content: center;
-	margin: 2rem 0;
+	margin: 30rem 0 2rem 0;
+	max-width: 10rem;
 }
 
 .items-bottom {
