--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 .container {
+	position: relative;
 	max-width: 24rem;
 	margin: 0 auto;
 }
@@ -42,12 +43,6 @@ body {
 	display: flex;
 	justify-content: center;
 	margin: 25rem 0 2rem 0;
-}
-
-.items-bottom {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 }
 
 h1 {
