--- a/styles/style.css
+++ b/styles/style.css
@@ -38,11 +38,11 @@ body {
 	background-attachment: local;
 }
 
-.marvel-logo {
+/*.marvel-logo {
 	bottom: 15rem;
 	display: flex;
 	justify-content: center;
-	margin: 25rem 0 2rem 0;
+	margin: 25rem 0 2rem 0;*/
 }
 
 h1 {
